[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
aws-config = "0.55.1"
aws-sdk-cognitoidentityprovider = "0.26.0"
aws-sdk-dynamodb = "0.26.0"
aws-smithy-http = "0.55.2"
base64 = "0.21.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jsonwebtokens = "1.2.0"
jsonwebtokens-cognito = "0.1.1"
reqwest = "0.11.16"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features = ["full"]}
